Task to run SIFT1M benchmark was added.